# atlas

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/: CODE_OF_CONDUCT.md
.github/workflows/: build.yml  tests.yml
app/: cli.py  main.py
app/agents/: ai_models.py
app/agents/annotation_agent/: main.py
app/agents/annotation_agent/common/: annotation_clip_embedder.py  asset_annotation_processor.py  asset_image_handler.py  embeddings.py  file_handler.py  get_context.py
app/agents/annotation_agent/models/: actions.py  annotations.py
app/agents/annotation_agent/tools/: __init__.py  analyze_class_overlap.py  analyze_intra_class_embeddings.py  analyze_objet_shapes.py  box_tightness_check.py
app/agents/common/: tools.py  utils.py
app/agents/common/ai_models/: captioning_model.py  clip_model.py  sam_model.py
app/agents/common/charts/: display.py  types.py
app/agents/common/interpreter/: merged_report_builder.py
app/agents/common/metadata/: annotation_metadata.py  annotation_metadata_processor.py  asset_metadata.py  error_content.py  image_metadata_processor.py
app/agents/common/models/: actions.py  assets.py  contents.py  shapes.py
app/agents/common/picsellia/: list_assets.py
app/agents/common/tool/: fork_dataset_version.py  get_annotation_metadata_tool.py  get_dataset_analysis_result.py  get_image_metadata_context.py  mcp_tool.py
app/agents/image_agent/: main.py
app/agents/image_agent/common/: asset_captioning.py  embeddings.py  get_context.py  image_blurriness_compute.py
app/agents/image_agent/models/: analysis_results.py  datacard.py  images.py  semantic.py
app/agents/image_agent/tools/: __init__.py  analyze_images_quality.py  build_dataset_datacard.py  detect_clip_embedding_outliers.py  extract_semantic_concepts.py
app/agents/mcp_chat_agent/: agent.py
app/agents/prompts/: generator.py
app/api/: agents_api.py  schemas.py
app/api/clients/: hinokuni.py  httpx_client.py  picsellia_sdk.py
app/config/: .env.template  celery.py  dependencies.py  fastapi.py  sentry.py  settings.py
app/services/: chat.py  context.py  embedders.py  file_handler.py  redis_config.py  report_enums.py  tasks.py
app/services/data_extraction/: image_embeddings.py  shape_embeddings.py
tests/: conftest.py  test_celery.py  test_ollama.py  test_routes.py
tests/routes/: test_agents_routes.py
(+36 files in other folders)
